# network-protocols

./: .clangd  .gitignore  README.md
00_kafka-commands/: 0_basics.md  1_multiple-brokers.md  2_sasl-plain-authentication.md  3_behind_nat.md
01_csharp-producer/kafka-producer/: Program.cs  kafka-producer.csproj
02_cpp-producer/: producer  producer.cpp
06_integrate-with-protobuf/: README.md
07_c-forwarder/: Makefile  README.md  forwarder.c  forwarder.out
cgi/: 00_apache.conf  01_hello-world.cgi  01_hello-world.cpp  02_json.cgi  02_json.cpp  03_cookies.cgi  03_cookies.cpp  04_http-post.cgi  04_http-post.cpp  05_send-image.cgi  05_send-image.cpp  06_send-video.cgi  06_send-video.cpp  07_status-code.cgi  07_status-code.cpp  08_partial-content-serving.cgi  08_partial-content-serving.cpp  09_send-video_partial.cgi  09_send-video_partial.cpp  10_http-authentication.cgi  10_http-authentication.cpp
curl/: Makefile  README.md  post-with-cookies.c  post.c
dns/: Makefile  README.md  server.c  server.h
ftp/: server.c
http/: Makefile  README.md  server-file.c  server.c
kafka/01_c-producer-consumer/: CMakeLists.txt  consumer.c  producer.c
message-queues/: Makefile  README.md  serialization-benchmark.cpp  serialization.cpp  serialization.h  zmq-client-multiple.cpp  zmq-client.cpp  zmq-server-multiple.cpp  zmq-server-single.cpp  zmq-server.cpp
protobuf-capnproto-and-zeromq/: Makefile  README.md  zmq-server-multiple.cpp
protobuf-vs-capnproto/: README.md  serialization-benchmark.cpp  serialization.h  zmq-client-multiple.cpp  zmq-client-single.cpp  zmq-server-single.cpp
rpc/: Makefile  README.md  rpc.h  serialization.cpp
tcp/: 1_client_1-send.c  1_client_n-sends.c  1_run-100-times.sh  1_tcp-client-multiple-sends.c  1_tcp-client.c  1_tcp-server_single-connection.c  2_server_n-connections.c  2_tcp-server_n-connections.c  3_server_epoll.c  3_tcp-server_epoll.c  CMakeLists.txt  Makefile  README.md  client-msgmore.c  common.h  run-n-times.sh  server.c  tcp-client-multiple-sends.c
tcp-udp/: Makefile  README.md  common.h  tcp-client-check-order.c  tcp-client.c  tcp-server-check-order.c  tcp-server.c  udp-client.c  udp-server.c
udp/: Makefile  README.md
udp-multicast/: 1_basic-listener.c  1_basic-receiver.c  1_basic-sender.c  2_benchmark-receiver.c  2_benchmark-sender.c  2_bind-receiver.c  2_bind-sender.c  2_interface-bound-receiver.c  2_interface-bound-sender.c  3_benchmark-receiver.c  3_benchmark-sender.c  3_benchmark-sender_non-blocking.c  Makefile  README.md  common.h  listener.c  sender.c
udp-multicast/boost.asio/: CMakeLists.txt  vcpkg.json
udp-multicast/boost.asio/src/: receiver.cpp  sender.cpp  test_message.proto
zeromq/: Makefile  README.md  publisher.cpp  subscriber.py
(+131 files in other folders)
